# goestools

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  commands.html  genindex.html  guides.html  index.html  installation.html  objects.inv  resources.html  search.html  searchindex.js
.circleci/: build.sh  config.yml  install.sh
.github/workflows/: build.yml  docs.yml
_sources/commands/: goesproc.rst.txt
_sources/guides/: minimal_receiver.rst.txt
commands/: goeslrit.html  goesproc.html  goesrecv.html
docker/ubuntu/: Dockerfile  run_cmake.sh  run_compile.sh
docs/: Makefile  commands.rst  conf.py  guides.rst  index.rst  installation.rst  requirements.txt  resources.rst
docs/commands/: goeslrit.rst  goesrecv.rst
docs/guides/: circonus.rst  minimal_receiver.rst
etc/: goesproc-goesn.conf  goesproc-goesr.conf  goesproc.conf  goesrecv-uhd.conf  goesrecv.conf
guides/: circonus.html  minimal_receiver.html
scripts/: list_raspbian_urls.py  setup_raspbian.sh
scripts/circonus/: configure.py
scripts/files/: raspberrypi.cmake
scripts/services/: README.md  goesproc.service  goesrecv.service
share/: goesproc-goesn.conf.in  goesproc-goesr.conf.in
share/ne/: README.txt  ne_50m_admin_1_states_provinces_lakes.json
share/wxstar/: README.txt
src/assembler/: CMakeLists.txt  assembler.cc  assembler.h  crc.cc  crc.h  packetinfo.cc  session_pdu.cc  session_pdu.h  transport_pdu.cc  transport_pdu.h  vcdu.h  virtual_channel.cc  virtual_channel.h
src/dcs/: CMakeLists.txt  dcs.cc  dcs.h  dcsdump.cc  packedascii.cc  sutron.cc  sutron.h  sutronTest.cc  tester-crc16.cc  tester-crc32.cc
src/decoder/: CMakeLists.txt  compute_sync_words.cc  correlator.cc  correlator.h  derandomizer.cc  derandomizer.h  packetdump.cc  packetizer.cc  packetizer.h  reader.cc  reader.h  reed_solomon.cc  reed_solomon.h  viterbi.h
src/goescat/: CMakeLists.txt  options.cc  options.h
src/goesdec/: CMakeLists.txt  compute_sync_words.cc  correlator.cc  correlator.h  crc.cc  crc.h  derandomizer.cc  derandomizer.h  file_handler.cc  file_handler.h  main.cc  packet.h  packetdump.cc  packetizer.cc  packetizer.h  reader.cc  reader.h  reed_solomon.cc  reed_solomon.h  session_pdu.cc  session_pdu.h  sha_handler.cc  sha_handler.h  transport_pdu.cc  transport_pdu.h  virtual_channel.cc  virtual_channel.h  viterbi.h
src/goesemwin/: CMakeLists.txt  emwin.cc  emwin.h  goesemwin.cc  options.cc  options.h  qbt.cc  qbt.h
src/goeslrit/: CMakeLists.txt  file_reader.h  goeslrit.cc  nanomsg_reader.cc  nanomsg_reader.h  options.cc  options.h  reader.cc  reader.h
src/goespackets/: CMakeLists.txt  goespackets.cc  options.cc  options.h
src/goesproc/: CMakeLists.txt  area.cc  area.h  config.cc  config.h  dir.cc  dir.h  file.cc  file.h  file_writer.cc  file_writer.h  filename.cc  filename.h  goesproc.cc  gradient.cc  gradient.h  handler.h  handler_dcs.cc  handler_dcs.h  handler_emwin.cc  handler_emwin.h  handler_goes16.cc  handler_goes16.h  handler_goesn.cc  handler_goesn.h  handler_goesr.cc  handler_goesr.h  handler_himawari8.cc  handler_himawari8.h  handler_nws.cc  handler_nws.h  handler_nws_image.cc  handler_nws_image.h  handler_nws_text.cc  handler_nws_text.h  handler_text.cc  handler_text.h  image.cc  image.h  image_gms.cc  (+19 more)
src/goesrecv/: CMakeLists.txt  agc.cc  agc.h  airspy_source.cc  airspy_source.h  benchmark.cc  clock_recovery.cc  clock_recovery.h  config.cc  config.h  costas.cc  costas.h  datagram_socket.cc  datagram_socket.h  decoder.cc  decoder.h  demodulator.cc  demodulator.h  file_source.cc  file_source.h  goesrecv.cc  hackrf_source.cc  hackrf_source.h  monitor.cc  monitor.h  nanomsg_source.cc  nanomsg_source.h  options.cc  options.h  packet_publisher.cc  packet_publisher.h  publisher.cc  publisher.h  quantize.cc  quantize.h  queue.h  rrc.cc  rrc.h  rtlsdr_source.cc  rtlsdr_source.h  (+13 more)
src/goesrecv/neon/: CMakeLists.txt  neon_mathfun.md  neon_mathfun_test.c
src/goesrecv/support/: generate_interpolator_taps.py
src/lib/: CMakeLists.txt  dcs.cc  dcs.h  dcsdump.cc  dir.cc  dir.h  file.cc  file.h  file_reader.cc  file_reader.h  file_writer.cc  file_writer.h  lrit.cc  lrit.h  lritdump.cc  nanomsg_reader.cc  nanomsg_reader.h  nanomsg_writer.cc  nanomsg_writer.h  packet_reader.cc  packet_reader.h  packet_writer.cc  packet_writer.h  timer.cc  timer.h  unzip.cc  util.cc  util.h  version-gen.h.in  version.cc  version.h  zip.cc  zip.h
src/lrit/: CMakeLists.txt  areadump.cc  file.cc  file.h  intersect.cc  json.cc  json.h  lrit.cc  lrit.h  lritdump.cc
src/util/: CMakeLists.txt  error.h  fs.cc  fs.h  string.cc  string.h  time.cc  time.h
test/goesemwin/: .gitignore  download.sh  test.sh
