file(GLOB GOESPROC_SRCS *.cc)
add_executable(goesproc ${GOESPROC_SRCS})
add_sanitizers(goesproc)
target_link_libraries(goesproc lrit opencv_core opencv_highgui opencv_imgproc)

find_package(PkgConfig)
pkg_check_modules(OPENCV REQUIRED opencv)
if("${OPENCV_VERSION}" VERSION_GREATER 3.0)
  target_link_libraries(goesproc opencv_imgcodecs)
endif()
